force-app/main/default/objects/Case/fields/Care_Program__c.field-meta.xml
<CustomField>
    <fullName>Care_Program__c</fullName>
    <label>Care Program</label>
    <description>The Care Program this Patient Support Plan is associated with.</description>
    <type>Lookup</type>
    <referenceTo>Care_Program__c</referenceTo>
    <relationshipName>Patient_Support_Plans</relationshipName>
    <relationshipLabel>Patient Support Plans</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>