force-app/main/default/objects/Case/fields/Completion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Completion_Reason__c</fullName>
    <label>Completion Reason</label>
    <description>Reason for completing/graduating the Patient Support Plan.</description>
    <type>TextArea</type>
</CustomField>