force-app/main/default/objects/Case/fields/Discontinuation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discontinuation_Reason__c</fullName>
    <label>Discontinuation Reason</label>
    <description>Reason for discontinuing the Patient Support Plan before completion.</description>
    <type>TextArea</type>
</CustomField>