force-app/main/default/objects/Case/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <label>Enrollment Date</label>
    <description>Date the patient was enrolled into the Care Program.</description>
    <type>Date</type>
</CustomField>