force-app/main/default/objects/Case/fields/Enrollment_Source__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Source__c</fullName>
    <label>Enrollment Source</label>
    <description>How the patient enrollment was received.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Fax</fullName><default>false</default><label>Fax</label></value>
            <value><fullName>eForm</fullName><default>false</default><label>eForm</label></value>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
            <value><fullName>HCP Referral</fullName><default>false</default><label>HCP Referral</label></value>
            <value><fullName>Web</fullName><default>false</default><label>Web</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>