force-app/main/default/objects/Case/fields/External_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_Number__c</fullName>
    <label>External Reference Number</label>
    <description>Reference number from an external system (e.g., payer case ID, prior auth number).</description>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
</CustomField>