force-app/main/default/objects/Case/fields/Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Review_Date__c</fullName>
    <label>Last Review Date</label>
    <description>Date when this Patient Support Plan was last reviewed by the coordinator.</description>
    <type>Date</type>
</CustomField>