force-app/main/default/objects/Case/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <label>Next Review Date</label>
    <description>Scheduled date for the next plan review by the coordinator.</description>
    <type>Date</type>
</CustomField>