force-app/main/default/objects/Case/fields/Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_End_Date__c</fullName>
    <label>Plan End Date</label>
    <description>Date when support under this plan ends or is expected to end.</description>
    <type>Date</type>
</CustomField>