force-app/main/default/objects/Case/fields/Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Start_Date__c</fullName>
    <label>Plan Start Date</label>
    <description>Date when active support under this plan begins.</description>
    <type>Date</type>
</CustomField>