force-app/main/default/objects/Case/fields/Primary_Care_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Primary_Care_Coordinator__c</fullName>
    <label>Primary Care Coordinator</label>
    <description>The primary care coordinator assigned to this Patient Support Plan.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Coordinated_Plans</relationshipName>
    <relationshipLabel>Coordinated Plans</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>