force-app/main/default/objects/Case/fields/Resolution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Summary__c</fullName>
    <label>Resolution Summary</label>
    <description>Summary of the resolution or outcome when the case is closed.</description>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>