force-app/main/default/objects/Case/fields/Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Support_Level__c</fullName>
    <label>Support Level</label>
    <description>Level of support provided under this Patient Support Plan.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Standard</fullName><default>true</default><label>Standard</label></value>
            <value><fullName>High-Touch</fullName><default>false</default><label>High-Touch</label></value>
            <value><fullName>Lite</fullName><default>false</default><label>Lite</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>