force-app/main/default/objects/Case/fields/Support_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Support_Subcategory__c</fullName>
    <label>Support Subcategory</label>
    <description>More specific classification within the Support Category.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>