force-app/main/default/objects/Case/recordTypes/Access_Reimbursement.recordType-meta.xml
<RecordType>
    <fullName>Access_Reimbursement</fullName>
    
    <active>true</active>
    <businessProcess>Support_Process</businessProcess>
    <description>Service request Case for access and reimbursement support: Benefits Verification, Prior Authorization, Appeals, Reimbursement assistance.</description>
    <label>Access &amp; Reimbursement</label>
</RecordType>