force-app/main/default/objects/Case/recordTypes/Coordination.recordType-meta.xml
<RecordType>
    <fullName>Coordination</fullName>
    
    <active>true</active>
    <businessProcess>Support_Process</businessProcess>
    <description>Service request Case for coordination activities: Appointment, Site of Care, Provider Coordination.</description>
    <label>Coordination</label>
</RecordType>