force-app/main/default/objects/Case/recordTypes/Patient_Support.recordType-meta.xml
<RecordType>
    <fullName>Patient_Support</fullName>
    
    <active>true</active>
    <businessProcess>Support_Process</businessProcess>
    <description>Service request Case for patient support: Education, Program Questions, General Assistance.</description>
    <label>Patient Support</label>
</RecordType>