force-app/main/default/objects/Case/recordTypes/Patient_Support_Plan.recordType-meta.xml
<RecordType>
    <fullName>Patient_Support_Plan</fullName>
    
    <active>true</active>
    <businessProcess>Support_Process</businessProcess>
    <description>Parent Case representing a Patient Support Plan — the patient's participation in a Care Program. Child Cases (service requests) are linked via ParentId.</description>
    <label>Patient Support Plan</label>
</RecordType>